added test cases

--- a/Assignment/demo-vertx-main/demo-vertx-main/pom.xml
+++ b/Assignment/demo-vertx-main/demo-vertx-main/pom.xml
@@ -38,12 +38,12 @@
             <groupId>io.vertx</groupId>
             <artifactId>vertx-web</artifactId>
         </dependency>
-            <!-- Other dependencies -->
-            <dependency>
-                <groupId>io.vertx</groupId>
-                <artifactId>vertx-web-client</artifactId>
-                <version>4.0.2</version> <!-- Replace with the desired version -->
-            </dependency>
+        <!-- Other dependencies -->
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-web-client</artifactId>
+            <version>4.0.2</version> <!-- Replace with the desired version -->
+        </dependency>
         <!-- configuration -->
         <dependency>
             <groupId>io.vertx</groupId>
@@ -84,6 +84,25 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.25</version>
         </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito2</artifactId>
+            <version>2.0.9</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-module-junit4</artifactId>
+            <version>2.0.9</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.8.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
